fixed overflow issue of homepage and also added proper mic and video control buttons to meeting lobby

--- a/app/globals.css
+++ b/app/globals.css
@@ -89,6 +89,10 @@
 .cl-navbarButton {
   color: white;
 }
+
+.cl-userButtonPopoverFooter,.cl-internal-1dauvpw{
+  display: none;
+}
 /* =============================== */
 
 /* .custom-toaster {
